Migrate CleanerUtil to prioritize Java 9+ jdk.internal.ref.Cleaner API for Java 21 compatibility
- Reorder unmapHackImpl() to try jdk.internal.ref.Cleaner first (Java 9-21 compatible)
- Fallback to sun.misc.Unsafe.invokeCleaner as secondary option
- Maintain Java 8 sun.misc.Cleaner as final fallback for backward compatibility
- Update class documentation to reflect new approach
- Preserves all existing functionality and error handling

This change aligns with Java 21 migration requirements while maintaining
complete backward compatibility for mixed-version environments.